--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,10 @@
 #unbind ^b
 #bind a send-prefix
 
+
+
+bind R source-file ~/.tmux.conf ; display-message "Config reloaded.."
+
 unbind '"'
 bind - splitw -v
 unbind %
@@ -21,4 +25,45 @@ bind ^u swapp -U
 bind ^d swapp -D
 
 setw -g mode-keys vi
-setw -g mode-mouse on
+#setw -g mode-mouse on
+
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
+#unbind -T copy-mode-vi Enter
+#bind-key -T copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# set -g default-shell $SHELL 
+# 
+# # Override the default command to use `reattach-to-user-namespace` for everything.
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# 
+# # Vim style navigation in copy mode
+# setw -g mode-keys vi
+# 
+# # Setup 'v' to begin selection, just like Vim
+# bind-key -t vi-copy v begin-selection
+# 
+# # Setup 'y' to yank (copy), just like Vim
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# 
+# # Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# 
+# # Bind ']' to use pbbaste
+# bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
