add some vim plugin and tmux enabled

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,32 @@
 #unbind ^b
 #bind a send-prefix
 
+set-option -g prefix2 ^a
+# use mouse to resize the panel
+set-option -g mouse on
 
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind R source-file ~/.tmux.conf ; display-message "Config reloaded.."
+# double input C-a will send the this to the program
+bind C-a send-prefix
+
+# Highlight active window
+set-window-option -g window-status-current-bg blue
+# Set status bar
+set -g status-bg black
+set -g status-fg white
+
+# Automatically set window title
+setw -g automatic-rename on
+
+set -g renumber-windows on  # renumber windows when a window is closed
+
+# set the index
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g set-titles on
+# set -g set-titles-string '#h ❐ #S ● #I #W'
 
 unbind '"'
 bind - splitw -v
@@ -16,54 +39,66 @@ bind j selectp -D
 bind h selectp -L
 bind l selectp -R
 
-bind ^k resizep -U 10
-bind ^j resizep -D 10
-bind ^h resizep -L 10
-bind ^l resizep -R 10
+# use -r will repeat the original operation by the last word
+bind -r ^k resizep -U 10
+bind -r ^j resizep -D 10
+bind -r ^h resizep -L 10
+bind -r ^l resizep -R 10
 
 bind ^u swapp -U
 bind ^d swapp -D
 
 setw -g mode-keys vi
-#setw -g mode-mouse on
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+#bind-key -t vi-copy 'C-v' rectangle-toggle
+bind -t vi-copy C-v rectangle-toggle
 
-set-option -g default-command "reattach-to-user-namespace -l bash"
+bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
+# notisfy
+setw -g monitor-activity on
+set -g visual-activity on
+
+# set the status bar
+#set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
+
+# set -g default-terminal "screen-256color"
+
+# set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# Mac
 #unbind -T copy-mode-vi Enter
 #bind-key -T copy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# set -g default-shell $SHELL 
-# 
+# set -g default-shell $SHELL
+#
 # # Override the default command to use `reattach-to-user-namespace` for everything.
 # set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-# 
+#
 # # Vim style navigation in copy mode
-# setw -g mode-keys vi
-# 
+#
 # # Setup 'v' to begin selection, just like Vim
 # bind-key -t vi-copy v begin-selection
-# 
+#
 # # Setup 'y' to yank (copy), just like Vim
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# 
+#
 # # Update default binding of `Enter` to also use copy-pipe
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# 
+#
 # # Bind ']' to use pbbaste
 # bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
