--- a/tmux.conf
+++ b/tmux.conf
@@ -54,8 +54,14 @@ bind -t vi-copy y copy-selection
 #bind-key -t vi-copy 'C-v' rectangle-toggle
 bind -t vi-copy C-v rectangle-toggle
 
-bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+#bind C-c run " tmux save-buffer - | xclip -i -sel clipboard > /dev/null 2>&1"
+#bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer > /dev/null 2>&1"
+#bind C-c run-shell -b "tmux save-buffer - | xclip -selection clipboard; tmux display-message \"Tmux buffer saved to clipboard\""
+# bind C-c run "tmux save-buffer - | nohup >/dev/null 2>/dev/null xclip -i -sel clipboard"
+#bind y run "tmux save-buffer - | xclip -selection clipboard &>/dev/null"
+#bind C-c run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+#bind C-c run "tmux save-buffer - | xsel -ib"
+#bind C-v run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"
 
 # notisfy
 setw -g monitor-activity on
@@ -98,7 +104,15 @@ set -g visual-activity on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# set for tmux-open
+set -g @open-B 'https://www.bing.com/search?q='
+set -g @open-S 'https://www.google.com/search?q='
+
+# set for tmux-copycat
+#set -g @copycat_search "/"
