--- a/tmux.conf
+++ b/tmux.conf
@@ -2,14 +2,14 @@
 #unbind ^b
 #bind a send-prefix
 
-set-option -g prefix2 ^a
+set-option -g prefix2 ^q
 # use mouse to resize the panel
 set-option -g mouse on
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # double input C-a will send the this to the program
-bind C-a send-prefix
+# bind C-a send-prefix
 
 # Highlight active window
 set-window-option -g window-status-current-bg blue
