--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@
 
 set-option -g prefix2 ^q
 # use mouse to resize the panel
-set-option -g mouse on
+# set-option -g mouse on
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
