update tmux for mac

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,10 +49,16 @@ bind ^u swapp -U
 bind ^d swapp -D
 
 setw -g mode-keys vi
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy y copy-selection
+# bind -t vi-copy C-v rectangle-toggle
+
+# for tmux2.6
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 #bind-key -t vi-copy 'C-v' rectangle-toggle
-bind -t vi-copy C-v rectangle-toggle
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 #bind C-c run " tmux save-buffer - | xclip -i -sel clipboard > /dev/null 2>&1"
 #bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer > /dev/null 2>&1"
