--- a/tmux.conf
+++ b/tmux.conf
@@ -50,15 +50,31 @@ bind ^d swapp -D
 
 setw -g mode-keys vi
 
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+# bind-key syntax changed in 2.4
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
+  "# Selection / copy / paste \
+   bind-key -t vi-copy v   begin-selection; \
+   bind-key -t vi-copy V   send -X select-line \
+   bind-key -t vi-copy C-v rectangle-toggle \
+   bind-key -t vi-copy y   copy-pipe 'xclip -selection clipboard -in'"
+
+# Newer versions
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+  "# Selection / copy / paste \
+   bind-key -T copy-mode-vi v   send -X begin-selection  # default is <space> \
+   bind-key -T copy-mode-vi V   send -X select-line \
+   bind-key -T copy-mode-vi C-v send -X rectangle-toggle  # default is C-v, or R in copy-mode (non-vi) \
+   bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel 'xclip -selection clipboard -in'"
 # bind -t vi-copy v begin-selection
 # bind -t vi-copy y copy-selection
 # bind -t vi-copy C-v rectangle-toggle
 
 # for tmux2.6
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-#bind-key -t vi-copy 'C-v' rectangle-toggle
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+if-shell "uname | grep -q Darwin" \
+  "bind-key -T copy-mode-vi 'v' send-keys -X begin-selection \
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy' \
+  bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle"
 
 #bind C-c run " tmux save-buffer - | xclip -i -sel clipboard > /dev/null 2>&1"
 #bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer > /dev/null 2>&1"
