--- a/tmux.conf
+++ b/tmux.conf
@@ -70,11 +70,19 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
 # bind -t vi-copy y copy-selection
 # bind -t vi-copy C-v rectangle-toggle
 
+
+#if-shell "" \
+
+#if-shell "uname | grep -q Darwin" \
+#  "display xxxx"
+
 # for tmux2.6
 if-shell "uname | grep -q Darwin" \
-  "bind-key -T copy-mode-vi 'v' send-keys -X begin-selection \
-  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy' \
-  bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle"
+  "display mac; \
+  bind-key -T copy-mode-vi 'v' send-keys -X begin-selection; \
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
+  bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle; \
+  display macOK"
 
 #bind C-c run " tmux save-buffer - | xclip -i -sel clipboard > /dev/null 2>&1"
 #bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer > /dev/null 2>&1"
