--- a/tmux.conf
+++ b/tmux.conf
@@ -51,16 +51,22 @@ bind ^d swapp -D
 setw -g mode-keys vi
 
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+
 # bind-key syntax changed in 2.4
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
-  "# Selection / copy / paste \
+# if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' \
+
+if-shell 'expr $TMUX_VERSION "<" 2.4' \
+  "display begin2.1; \
    bind-key -t vi-copy v   begin-selection; \
-   bind-key -t vi-copy V   send -X select-line \
-   bind-key -t vi-copy C-v rectangle-toggle \
-   bind-key -t vi-copy y   copy-pipe 'xclip -selection clipboard -in'"
+   bind-key -t vi-copy V   select-line; \
+   bind-key -t vi-copy C-v rectangle-toggle; \
+   bind-key -t vi-copy y   copy-pipe 'xclip -selection clipboard -in'; \
+   display 2.1"
 
 # Newer versions
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+# if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+
+if-shell 'expr $TMUX_VERSION ">" 2.4' \
   "# Selection / copy / paste \
    bind-key -T copy-mode-vi v   send -X begin-selection  # default is <space> \
    bind-key -T copy-mode-vi V   send -X select-line \
