--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ set -g status-bg black
 set -g status-fg white
 
 # Automatically set window title
-setw -g automatic-rename on
+setw -g automatic-rename off
 
 set -g renumber-windows on  # renumber windows when a window is closed
 
@@ -143,6 +143,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
@@ -153,3 +156,15 @@ set -g @open-S 'https://www.google.com/search?q='
 
 # set for tmux-copycat
 #set -g @copycat_search "/"
+
+# 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-save-shell-history 'on'
+
+# 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+# 15 is default
+# set -g @continuum-save-interval '60'
+
+# 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
