--- a/tmux.conf
+++ b/tmux.conf
@@ -145,7 +145,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
@@ -159,12 +159,13 @@ set -g @open-S 'https://www.google.com/search?q='
 
 # 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-save-shell-history 'on'
+set -g @resurrect-save-shell-history 'off'
+set -g @resurrect-strategy-vim 'session'
 
 # 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 # 15 is default
 # set -g @continuum-save-interval '60'
 
 # 'seebi/tmux-colors-solarized'
-set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'dark'
