use space as leader

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,9 @@ set-option -g prefix2 ^q
 # use mouse to resize the panel
 set-option -g mouse on
 
+# can use mouse to copy
+set -g mouse on
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # double input C-a will send the this to the program
@@ -30,9 +33,11 @@ set -g set-titles on
 # set -g set-titles-string '#h ❐ #S ● #I #W'
 
 unbind '"'
-bind - splitw -v
+bind - splitw -v -c "#{pane_current_path}"
 unbind %
-bind | splitw -h
+bind | splitw -h -c "#{pane_current_path}"
+
+# bind-key c new-window -c "#{pane_current_path}"
 
 bind k selectp -U
 bind j selectp -D
@@ -88,8 +93,12 @@ if-shell "uname | grep -q Darwin" \
   bind-key -T copy-mode-vi 'v' send-keys -X begin-selection; \
   bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle; \
+  bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
+  set -g default-command 'tmux rename-window bash; reattach-to-user-namespace -l ${SHELL}'; \
   display macOK;"
 
+
+#  bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
 #bind C-c run " tmux save-buffer - | xclip -i -sel clipboard > /dev/null 2>&1"
 #bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer > /dev/null 2>&1"
 #bind C-c run-shell -b "tmux save-buffer - | xclip -selection clipboard; tmux display-message \"Tmux buffer saved to clipboard\""
@@ -120,7 +129,6 @@ set -g visual-activity on
 # set -g default-shell $SHELL
 #
 # # Override the default command to use `reattach-to-user-namespace` for everything.
-# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 #
 # # Vim style navigation in copy mode
 #
@@ -161,6 +169,8 @@ set -g @open-S 'https://www.google.com/search?q='
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-shell-history 'off'
 set -g @resurrect-strategy-vim 'session'
+
+set -g @yank_with_mouse on
 
 # 'tmux-plugins/tmux-continuum'
 # set -g @continuum-restore 'on'
