--- a/tmux.conf
+++ b/tmux.conf
@@ -94,10 +94,11 @@ if-shell "uname | grep -q Darwin" \
   bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle; \
   bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
-  set -g default-command 'tmux rename-window bash; reattach-to-user-namespace -l ${SHELL}'; \
+  set -g default-command 'reattach-to-user-namespace -l ${SHELL}'; \
   display macOK;"
 
 
+  # set -g default-command 'tmux rename-window bash; reattach-to-user-namespace -l ${SHELL}'; \
 #  bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'; \
 #bind C-c run " tmux save-buffer - | xclip -i -sel clipboard > /dev/null 2>&1"
 #bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer > /dev/null 2>&1"
